--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.0",
+    "eslint": "8.22.0",
+    "eslint-config-react-app": "^7.0.1",
     "init": "^0.1.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
