--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.7",
     "tailwindcss-cli": "^0.1.2",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
